--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,12 +18,20 @@ jobs:
           #svg_out_path: dist/github-contribution-grid-snake.svg
 
            # Repositorio que será utilizado para gerar os arquivos.
-      - uses: Platane/snk@master
-        id: snake-gif
+      #- uses: Platane/snk@master
+        #id: snake-gif
+        #with:
+          #github_user_name: lucaschagas550 #Seu usuario
+          #gif_out_path: dist/github-contribution-grid-snake.gif
+          #svg_out_path: dist/github-contribution-grid-snake.svg
+
+      - name: generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: lucaschagas550 #Seu usuario
-          gif_out_path: dist/github-contribution-grid-snake.gif
-          svg_out_path: dist/github-contribution-grid-snake.svg
+          github_user_name: lucaschagas550
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
